home_styles.css
        #main {
        }
 
        html, body {
          padding: 0px;
          margin: 0px;
          height: 100vh;
          overflow-x: scroll;
          overflow-y: hidden;
          font-family: 'Helvetica Neue', Arial, Helvetica, sans-serif;
        }

        .profile_thumbnail {
          vertical-align: middle;
          border: 4px solid #ddd;
          border-radius: 8px;
          height: 110px;
          width: 110px;
          margin-left: 45px;
          margin-top: 16px;
        }

        .header {
          width: 100%;
          height: 150px;
          overflow: hidden;
          background-color: rgb(38, 114, 71);
        }

        .container {
          background-color: rgb(38, 114, 71);
          width: 100%;
          overflow-x: auto;
          overflow-y: hidden;
          height: calc(100vh - 150px);
          white-space: nowrap;
          padding-left: 5px;
        }

        .list {
          margin: 5px;
          border: 1px solid rgb(204, 204, 204);
          border-radius: 3px;
          display: inline-block;
          white-space: normal;
          width: 250px;
          max-height: calc(95vh - 150px);
          vertical-align: top;
          padding: 4px 4px 0px;
          background-color: rgb(226, 228, 230);
        }
       
        .list-header {
          padding: 8px 4px;
          position: relative;
          height: 25px;
          display: block;
          line-height: 18px;
          text-align: left;
        }
       
        .card-list {
          position: block;
          overflow-x: hidden;
          height: auto;
          width: 100%;
          max-height: calc(95vh - 150px - 42px);
          margin-bottom: 5px;
        }
 
        .card {
          padding: 6px 8px 4px;
          margin-bottom: 4px;
          position: relative;
          display: block;
          cursor: pointer;
          color: rgb(77, 77, 77);
          font-size: 14px;
          line-height: 18px;
          border: 1px solid rgb(204, 204, 204);
          border-radius: 4px;
          width: 240px;
          text-align: left;
          background-color: rgb(255, 255, 255);
        }

        .card-title {
          color: rgb(77, 77, 77);
          clear: both;
          display: block;
          font-weight: 400;
          margin: 0px 0px 4px;
          overflow: hidden;
          text-decoration: none;
          word-wrap: break-word;
          background-color: transparent;
        }

        .list-title {
          cursor: pointer;
          display: inline;
          font-size: 15px;
          font-weight: bold;
          line-height: 18px;
          margin: 0px;
          min-height: 19px;
          min-width: 30px;
          text-overflow: ellipsis;
          word-wrap: break-word;
          position: relative;
          color: rgb(77, 77, 77);
        }

